--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,6 +10,7 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="icon" href="assets/handshake.svg" sizes="16x16">
         <link rel="stylesheet" href="css/bootstrap.min.css">
     </head>
     <body class="bg-light">
